discussion/kv_engine/175104/175104_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: RangeScan continue main patch

Change-Id: I3dcd0c8445190bb1f313d2b2746779bff7ff3cbf

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-23 12:19:27.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-23 12:35:23.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46324/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_engine.cc(7008): error C2660: "KVBucket::cancelRangeScan": function does not take 2 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46324/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17667/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:7008:74: error: too few arguments to function call, expected 3, have 2 [clang-diagnostic-error]
    return acquireEngine(this)->getKVBucket()->cancelRangeScan(vbid, uuid);
                                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.h:953:5: note: "cancelRangeScan" declared here
    cb::engine_errc cancelRangeScan(Vbid vbid,
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17667/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:7008:74:
error: too few arguments to function call, expected 3, have 2 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17667/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38928/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:7008:74:
error: too few arguments to function call, expected 3, have 2
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38928/ )

CMake error: CMakeLists.txt:139 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38928/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27842/ : FAILURE

Compile error at [2022-05-23T12:30:19.563Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/ep_engine.cc:7008:74:
error: too few arguments to function call, expected 3, have 2
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27842/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7279/ : FAILURE

Compile error at [2022-05-23T12:27:42.515Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ep_engine.cc:7008:74:
error: too few arguments to function call, expected 3, have 2
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7279/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7380/ : FAILURE

Compile error at [2022-05-23T12:29:46.075Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/ep_engine.cc:7008:74:
error: no matching function for call to ?KVBucket::cancelRangeScan(Vbid&, cb::rangescan::Id&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7380/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19441/ : FAILURE

Compile error at [2022-05-23T12:35:00.619Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_engine.cc:7008:74:
error: no matching function for call to ?KVBucket::cancelRangeScan(Vbid&, cb::rangescan::Id&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19441/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20457/ : FAILURE

Compile error at [2022-05-23T12:28:35.438Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_engine.cc:7008:74:
error: too few arguments to function call, expected 3, have 2
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20457/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18643/ : FAILURE

Compile error at [2022-05-23T12:23:47.938Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/ep_engine.cc:7008:74:
error: too few arguments to function call, expected 3, have 2
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18643/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19791/ : FAILURE

Compile error at [2022-05-23T12:28:28.330Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_engine.cc:7008:74:
error: no matching function for call to ?KVBucket::cancelRangeScan(Vbid&, cb::rangescan::Id&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19791/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16693/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-01 10:44:12.000000000
Message: 
Patch Set 2: Verified-1 -Code-Review

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7503/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7503/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20026/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20026/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19682/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19682/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20684/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20684/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28075/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28075/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7607/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7607/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18873/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18873/ )
----------------------------------------------------------------------------------------------------------------------
